--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -1,4 +1,5 @@
 <!-- Renders post date, title, and snippet of text. -->
+<h2>Featured Work</h2>
 <div class="py-2 mb-2 prose">
   <h2 class="h1 lh-condensed col-9 mb-0">
     <a class="link-primary" title="{{ post.url | prepend: site.baseurl }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
