--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -3,7 +3,7 @@
 <div class="py-2 mb-2 prose">
   {% for post in site.categories.works %}
    {% if post.img %}
-  <a class="post-thumbnail" style="background-image: url({{"/assets" | prepend: site.baseurl | append : post.img}})" href="{{post.url | prepend: site.baseurl}}"></a>
+  <a class="post-thumbnail" height="100%" style="background-image: url({{"/assets" | prepend: site.baseurl | append : post.img}})" href="{{post.url | prepend: site.baseurl }}"></a>
  {% endif %}
   {% endfor %}
   <h2 class="h1 lh-condensed col-9 mb-0">
