--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -17,6 +17,10 @@ layout: default
  {% endif %}
   {% endfor %}
 
+  <style>
+    .post-thumbnail {display: inline-block; height: 3rem;}
+  </style>
+
   <div class="prose py-4" itemprop="articleBody">
       {{ content }}
   </div>
