--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -6,6 +6,11 @@
   <div class="post-thumbnail" style="background-image: url({{"/assets/" | prepend: site.baseurl | append : post.img}})" href="{{ post.url | relative_url }}"></div>
  {% endif %}
   {% endfor %}
+  
+  <style>
+    .post-thumbnail {height: 30rem; background-repeat:no-repeat; background-size:contain;}
+  </style>
+  
   <h2 class="h1 lh-condensed col-9 mb-0">
     <a class="link-primary" title="{{ post.url | prepend: site.baseurl }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
   </h2>
