--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="container mx-auto px-2" itemscope itemtype="http://schema.org/BlogPosting">
-  <div class="mt-4 mb-2 clearfix header-text" style="background-image: url({{"/assets/" | prepend: site.baseurl | append : post.img}}); height: 30rem; background-repeat:no-repeat; background-size:contain;" href="{{ post.url | relative_url }}">
+  <div class="mt-4 mb-2 clearfix header-text" style="background-image: url({{"/assets/" | prepend: site.url | base.url | append : post.img}}); height: 30rem; background-repeat:no-repeat; background-size:contain;" href="{{ post.url | relative_url }}">
     <h1 class="h0 inline-block py-2 mt-4 header-title">{{ page.title }}</h1>
     <div class="clearfix mb-4 py-1">
       <div class="col-1 sm-width-full border-top-thick">
