--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -11,7 +11,11 @@ layout: default
     </div>
   </div>
 
-  <div class="post-thumbnail" style="background-image: url({{"/assets/" | prepend: site.baseurl | append : post.img}}); background-repeat:no-repeat; background-size:contain;""></div>
+  <div class="post-thumbnail" style="background-image: url({{'/assets/' | prepend: site.baseurl | append : post.img}})"></div>
+
+    <style>
+    .post-thumbnail {height: 30rem; background-repeat:no-repeat; background-size:contain;}
+  </style>
   
   <div class="prose py-4" itemprop="articleBody">
       {{ content }}
