--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
+ <style>
+    .post-thumbnail {height: 30rem; background-repeat:no-repeat; background-size:contain;}
+  </style>
+
 <div class="container mx-auto clearfix mt-2 mt-lg-4 px-2">
   <div class="border-top-thick">
     
