--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -11,7 +11,9 @@ layout: default
     </div>
   </div>
 
-  <div class="post-thumbnail" style="background-image: url({{ post.img }} | 'https://www.okoseoglu.github.io/ogulkoseoglu/assets/')"></div>
+ {% if post.img %}
+  <div class="post-thumbnail" style="background-image: url({{"/assets/" | prepend: site.baseurl | append : post.img}})"></div>
+ {% endif %}
   
   <div class="prose py-4" itemprop="articleBody">
       {{ content }}
