--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -10,8 +10,10 @@ layout: default
       </div>
     </div>
   </div>
-
+  
+{% for post in site.posts %}
   <div class="post-thumbnail" style="background-image: url({{"/assets/" | prepend: site.baseurl | append: post.img}})"></div>
+  {% endfor %}
   
   <div class="prose py-4" itemprop="articleBody">
       {{ content }}
