--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,12 @@
  <style>
-    .post-thumbnail {height: 30rem; background-repeat:no-repeat; background-size:contain;}
+    .full-width {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+}
  </style>
 
 <div class="container mx-auto clearfix mt-2 mt-lg-4 px-2">
