--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -11,7 +11,7 @@ layout: default
     </div>
   </div>
   
-![]({{'/assets/' | append: page.img | prepend: site.baseurl }})
+<img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" />
   
   <div class="prose py-4" itemprop="articleBody">
       {{ content }}
