--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -2,7 +2,9 @@
 
 <div class="py-2 mb-2 prose">
   
-<img src="{{'/assets/' | append: post.img | prepend: site.baseurl }}" />
+<a href="{{ post.url | prepend: site.baseurl }}">
+  <img src="{{'/assets/' | append: post.img | prepend: site.baseurl }}" />
+</a>
   
   <h2 class="h1 lh-condensed col-9 mb-0">
     <a class="link-primary" title="{{ post.url | prepend: site.baseurl }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
