--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -2,7 +2,7 @@
 
 <div class="py-2 mb-2 prose">
   
-<a href="{{ post.url | prepend: site.baseurl }}">
+<a class="no-underline" href="{{ post.url | prepend: site.baseurl }}">
   <img src="{{'/assets/' | append: post.img | prepend: site.baseurl }}" />
 </a>
   
