--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" width="100%" />
+<img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" width="100%" style="object-position: 0 100%;" />
 
 <article class="container mx-auto px-2" itemscope itemtype="http://schema.org/BlogPosting">
   <div class="mt-4 mb-2 clearfix header-text">
