--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" width="100%" />
+<img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" width="100%" style="position:relative"/>
 
-<article class="container mx-auto px-2" itemscope itemtype="http://schema.org/BlogPosting">
+<article style="position:absolute; top:1rem;" class="container mx-auto px-2" itemscope itemtype="http://schema.org/BlogPosting">
   <div class="mt-4 mb-2 clearfix header-text">
     <h1 class="h0 inline-block py-2 mt-4 header-title">{{ page.title }}</h1>
     <div class="clearfix mb-4 py-1">
