--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -2,9 +2,6 @@
 layout: default
 ---
 
-<img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" width="100%" style="position:relative"/>
-
-<div style="position:absolute; top:1rem;">
 <article class="container mx-auto px-2" itemscope itemtype="http://schema.org/BlogPosting">
   <div class="mt-4 mb-2 clearfix header-text">
     <h1 class="h0 inline-block py-2 mt-4 header-title">{{ page.title }}</h1>
@@ -14,6 +11,8 @@ layout: default
     </div>
   </div>
   </div>
+
+  <img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" width="100%" />
   
   <div class="prose py-4" itemprop="articleBody">
       {{ content }}
