--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -12,7 +12,7 @@ layout: default
   </div>
   </div>
 
-  <img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" width="100%" />
+  <img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" />
   
   <div class="prose py-4" itemprop="articleBody">
       {{ content }}
