--- a/_layouts/category-post.html
+++ b/_layouts/category-post.html
@@ -9,7 +9,7 @@ layout: default
       <div class="col-1 sm-width-full border-top-thick">
       </div>
     </div>
-     <img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" />
+     <img src="{{'/assets/' | append: page.img | prepend: site.baseurl }}" width="100%" />
   </div>
   
   <div class="prose py-4" itemprop="articleBody">
