--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -2,8 +2,8 @@
 
 <div class="py-2 mb-2 prose">
   
-<a class="no-underline" href="{{ post.url | prepend: site.baseurl }}">
-  <img src="{{'/assets/' | append: post.img | prepend: site.baseurl }}" width="50%" />
+<a class="no-underline no-underline-hover" href="{{ post.url | prepend: site.baseurl }}">
+  <img src="{{'/assets/' | append: post.img | prepend: site.baseurl }}" width="60%" />
 </a>
   
   <h2 class="h1 lh-condensed col-9 mb-0">
