--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -7,7 +7,7 @@
 </a>
   
   <h2 class="h1 lh-condensed col-9 mb-0">
-    <a class="link-primary" title="{{ post.url | prepend: site.baseurl }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+    <a class="link-primary" title="{{ post.url | prepend: site.baseurl }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title | smartify }}</a>
   </h2>
   <a class="no-underline-hover h5 block py-1 mb-1" title="{{ post.url | prepend: site.baseurl }}" href="{{ post.url | prepend: site.baseurl }}"></a>
   <p>{{ post.content | strip_html | truncatewords:30 }}</p>
