--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,8 @@
   <body>
     
   {% include header.html %}
+
+      <div>{{ content }}</div>
    
       <div class="container mx-auto px-2 py-2">
         <h2>Featured Posts</h2>
