--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,12 @@
       <div>{{ content }}</div>
    
       <div class="container mx-auto px-2 py-2">
-        <h2>Featured Posts</h2>
+        
+        <h2>Featured Works</h2>
+        
         {% for post in site.posts %}
           {% include post_block.html %}
+        
         {% endfor %}
       </div>
 
