--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,10 +6,12 @@
   <body>
     
   {% include header.html %}
-
-      <div>{{ content }}</div>
    
       <div class="container mx-auto px-2 py-2">
+
+         <div>
+           {{ content }}
+         </div>
         
         <h2>Featured Works</h2>
         
