--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,7 @@
       <div class="container mx-auto px-2 py-2">
 
          <div>
+           {% include page_heading.html %}
            {{ content }}
          </div>
         
