--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,10 +9,16 @@
    
       <div class="container mx-auto px-2 py-2">
 
-         <div>
-           {% include page_heading.html %}
-           {{ content }}
-         </div>
+        
+           <div class="mt-4 mb-2 clearfix header-text">
+  <h1 class="h0 inline-block py-2 mt-4 header-title">{{ page.title }}</h1>
+  <div class="clearfix mb-4 py-1">
+    {{ content }}
+    <div class="col-1 sm-width-full border-top-thick">
+  </div>
+</div>
+           
+         
         
         <h2>Featured Works</h2>
         
