--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -6,7 +6,7 @@
   <img src="{{'/assets/' | append: post.img | prepend: site.baseurl }}" width="100%" />
 </a>
   
-  <h3 class="h3 lh-condensed col-9 mb-0">
+  <h3 class="h3 lh-condensed mb-0">
     <a class="link-primary" title="{{ post.url | prepend: site.baseurl }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title | smartify }}</a>
   </h3>
 </div>
