--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@
           {% include post_block.html %}
         {% endfor %}
 
-             <div style="display:inline;"><span><a href="{{ site.url }}/about">About</a></span><span><a href="">{{ site.url }}/works</a></span></div>
+             <div style="display:inline;"><span><a href="{{ site.url }}/about">About</a></span><span><a href="{{ site.url }}/works">Works</a></span></div>
            </div>
 
     {% include footer.html %}
