--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,8 +24,8 @@
         {% endfor %}
 
              <div>
-               <h3><em><a href="{{ site.baseurl }}/about">About</a></em></h3>
-               <h3><em><a href="{{ site.baseurl }}/works">Works</a></em></h2>
+               <h3><em><a href="{{ '/about' | relative_url }}">About</a></em></h3>
+               <h3><em><a href="{{ '/works' | relative_url }}">Works</a></em></h2>
              </div>
 
   
