--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,10 +3,10 @@
     
     <ul class="list-reset right clearfix sm-width-full py-2 mb-2 mb-lg-0">
       <li class="inline-block mr-1">
-       
-      </li>
-      <li class="inline-block">
-       
+       {% for post in site.tags.Play %}
+<h2>{{ post.title }}</h2>
+<time>{{ post.date }}</time>
+{% endfor %}
       </li>
     </ul>
   </div>
