--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,7 @@
 <div class="container mx-auto clearfix mt-2 mt-lg-4 px-2">
   <div class="border-top-thick">
     
-    <ul class="list-reset right clearfix sm-width-full py-2 mb-2 mb-lg-0">
-      <li class="inline-block mr-1">
-       {% for page in site.page %}
-        <h3>{{ page.title }}</h3>
-      {% endfor %}
-      </li>
-    </ul>
+{% include header.html %}
   </div>
 </div>
 
