--- a/_layouts/category-index.html
+++ b/_layouts/category-index.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 ---
-
-{{ content }}
+<div class="container mx-auto">
+<p>{{ content }}</p>
+</div>
 
 {% if page.category_name %}
   {% assign category_name = page.category_name %}
