--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,15 +31,16 @@
   <div class="border-top-thick">
     
 <ul class="mt-1 mt-lg-2 mr-2 mr-lg-3">
-      {% for my_page in site.pages %}
-        {% if my_page.title %}
-        <li class="inline-block block-lg text-right ml-1 ml-lg-0">
-          <a class="italic no-underline h4" href="{{ my_page.url | prepend: site.baseurl }}">
-            {{ my_page.title }}
+        <li class="inline-block block-lg ml-1 ml-lg-0">
+          <a class="italic no-underline h4" href="{{ '/about' | prepend: site.baseurl }}">
+            About
           </a>
         </li>
-        {% endif %}
-      {% endfor %}
+        <li class="inline-block block-lg ml-1 ml-lg-0">
+          <a class="italic no-underline h4" href="{{ '/works' | prepend: site.baseurl }}">
+            Works
+          </a>
+        </li>
     </ul>
   </div>
 </div>
