--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,26 +25,8 @@
 
            </div>
 
- <!--   {% include footer.html %} -->
+ {% include footer.html %}
         
-        <div class="container mx-auto clearfix mt-2 mt-lg-4 px-2">
-  <div class="border-top-thick">
-    
-<ul class="mt-1 mt-lg-2 mr-2 mr-lg-3">
-        <li class="inline-block block-lg ml-1 ml-lg-0">
-          <a class="italic no-underline h4" href="{{ '/about' | prepend: site.baseurl }}">
-            About
-          </a>
-        </li>
-        <li class="inline-block block-lg ml-1 ml-lg-0">
-          <a class="italic no-underline h4" href="{{ '/works' | prepend: site.baseurl }}">
-            Works
-          </a>
-        </li>
-    </ul>
-  </div>
-</div>
-
   </body>
 
 </html>
